[gd_scene load_steps=4 format=3 uid="uid://hwkncn0qcmky"]

[ext_resource type="Script" path="res://scripts/menus/quit_button_3d.gd" id="1_6w4t1"]
[ext_resource type="FontFile" uid="uid://y2fv3f1jprtd" path="res://assets/fonts/bb.ttf" id="2_877vp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_if4w3"]
size = Vector3(5.09972, 2.13902, 1)

[node name="settings_button_3d" type="Area3D"]
script = ExtResource("1_6w4t1")

[node name="Label3D" type="Label3D" parent="."]
modulate = Color(0, 1, 1, 1)
text = "Quit"
font = ExtResource("2_877vp")
font_size = 500
outline_size = 50

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.176142, 0.0103378, 0)
shape = SubResource("BoxShape3D_if4w3")

[node name="spin_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="spin_timer" to="." method="_on_spin_timer_timeout"]
